refactor: PR review